--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ body {
   stroke-width: 1.5px;
 }
 
+.node {
+  stroke: steelblue;
+  fill: steelblue;
+}
+
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.js"></script>
@@ -59,8 +64,9 @@ var svg = d3.select("body").append("svg")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58ZG&days=7", function(error, jsondata) {
+
   data=jsondata.feeds;
-  console.log(data);
+
   data.forEach(function(d) {
     d.created_at = parseDate(d.created_at);
     d.field1 = +d.field1;
@@ -84,12 +90,24 @@ d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58Z
       .style("text-anchor", "end")
       .text("Temperature (C)");
 
-  console.log(data);
-
   svg.append("path")
       .datum(data)
       .attr("class", "line")
       .attr("d", line);
+
+  svg.selectAll("circle").data(data).enter().append("circle")
+    .attr("cx",function(d) {return x(d.created_at)})
+    .attr("cy",function(d) {return y(d.field1)})
+    .attr("class","node")
+    .attr("r",5)
+    .style("opacity",0)
+    .on("mouseover",function(d,i) {
+      d3.select(this).style("opacity",1);
+    })
+    .on("mouseout",function(d,i) {
+      d3.select(this).style("opacity",0);
+    });
+    
 });
 
 </script>
