--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body {
 .node {
   stroke: #FF6600;
   fill: #FF6600;
+  font: 15px sans-serif;
 }
 
 </style>
@@ -95,11 +96,11 @@ d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58Z
       .attr("class", "line")
       .attr("d", line);
 
-  nodes=svg.selectAll("circle").data(data).enter().append("circle")
-    .attr("cx",function(d) {return x(d.created_at)})
-    .attr("cy",function(d) {return y(d.field1)})
+  nodes=svg.selectAll(".node").data(data).enter().append("g")
+    .attr("transform",function(d) {
+      return "translate("+x(d.created_at)+","+y(d.field1)+")";
+    })
     .attr("class","node")
-    .attr("r",5)
     .style("opacity",0)
     .on("mouseover",function(d,i) {
       d3.select(this).style("opacity",1);
@@ -107,6 +108,18 @@ d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58Z
     .on("mouseout",function(d,i) {
       d3.select(this).style("opacity",0);
     });
+
+  nodes.append("text")
+  .text(function(d) {
+    return d.field1;
+  })
+  .attr("x",10);
+
+  nodes.append("circle")
+    .attr("cx",-2)
+    .attr("cy",-2)
+    .attr("r",5);
+
 
 });
 
