--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@ body {
   stroke-width: 1.5px;
 }
 
+.boiler_line {
+  fill: none;
+  stroke: red;
+  stroke-width: 1.5px;
+}
+
 .node {
   stroke: #FF6600;
   fill: #FF6600;
@@ -46,6 +52,9 @@ var x = d3.time.scale()
 var y = d3.scale.linear()
     .range([height, 0]);
 
+var boiler_y = d3.scale.linear()
+    .range([height, 0]);
+
 var xAxis = d3.svg.axis()
     .scale(x)
     .orient("bottom");
@@ -54,9 +63,18 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left");
 
+var boiler_yAxis = d3.svg.axis()
+    .scale(boiler_y)
+    .orient("right")
+    .tickValues([0,1]);
+
 var line = d3.svg.line()
     .x(function(d) { return x(d.created_at); })
     .y(function(d) { return y(d.field1); });
+
+var boiler_line = d3.svg.line()
+    .x(function(d) { return x(d.created_at); })
+    .y(function(d) { return boiler_y(d.field3); });
 
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
@@ -64,17 +82,20 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58ZG&days=7", function(error, jsondata) {
+d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58ZG&results=100&round=1", function(error, jsondata) {
 
   data=jsondata.feeds;
 
   data.forEach(function(d) {
     d.created_at = parseDate(d.created_at);
     d.field1 = +d.field1;
+    d.field2 = +d.field2;
+    d.field3 = +d.field3;
   });
 
   x.domain(d3.extent(data, function(d) { return d.created_at; }));
-  y.domain(d3.extent(data, function(d) { return d.field1; }));
+  y.domain([-5,20]);
+  boiler_y.domain([0,1]);
 
   svg.append("g")
       .attr("class", "x axis")
@@ -91,10 +112,26 @@ d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58Z
       .style("text-anchor", "end")
       .text("Temperature (C)");
 
+  svg.append("g")
+      .attr("class", "y axis")
+      .attr("transform", "translate("+width+",0)")
+      .call(boiler_yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", "-.81em")
+      .style("text-anchor", "end")
+      .text("Boiler");
+
   svg.append("path")
       .datum(data)
       .attr("class", "line")
       .attr("d", line);
+
+  svg.append("path")
+      .datum(data)
+      .attr("class", "boiler_line")
+      .attr("d", boiler_line);
 
   nodes=svg.selectAll(".node").data(data).enter().append("g")
     .attr("transform",function(d) {
@@ -122,5 +159,9 @@ d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58Z
 
 
 });
+
+//setInterval(function() {
+//  console.log("ping");
+//},1000);
 
 </script>
