--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ body {
   fill: #FF3300;
   stroke: #FF3300;
   stroke-width: 1.5px;
-  fill-opacity: 0.5;
+  fill-opacity: 0.4;
+  stroke-opacity: 0.4;
 }
 
 .node {
