fix style of area

--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@ body {
   stroke-width: 1.5px;
 }
 
-.area, .boiler_line {
+.area {
   fill: #FF3300;
+  fill-opacity: 0.4;
+  stroke: none;
+}
+
+.boiler_line {
+  fill: none;
   stroke: #FF3300;
   stroke-width: 1.5px;
-  fill-opacity: 0.4;
   stroke-opacity: 0.4;
 }
 
