refactor date range selection

--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@ body {
   shape-rendering: crispEdges;
 }
 
-.x.axis path {
-  display: none;
-}
-
 .line {
   fill: none;
   stroke: steelblue;
@@ -49,8 +45,13 @@ body {
 
 </style>
 <body>
+
 <script src="http://d3js.org/d3.v3.js"></script>
 <script>
+
+var uriDateFormat=d3.time.format("%Y-%m-%d %H:%M:%S");
+var startDate=getStartOfDay(new Date());
+var endDate=d3.time.day.offset(startDate,1);
 
 var margin = {top: 20, right: 20, bottom: 30, left: 50},
     width = 960 - margin.left - margin.right,
@@ -99,7 +100,10 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58ZG&days=1", function(error, jsondata) {
+var URL="https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58ZG&";
+URL=URL+encodeStartAndEndDates(startDate,endDate);
+
+d3.json(URL, function(error, jsondata) {
 
   data=jsondata.feeds;
 
@@ -112,7 +116,7 @@ d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58Z
 
   calculateTotalMinutes(data);
 
-  x.domain(d3.extent(data, function(d) { return d.created_at; }));
+  x.domain([startDate,endDate]);
   y.domain([-5,20]);
   boiler_y.domain([0,1]);
 
@@ -193,10 +197,17 @@ d3.json("https://api.thingspeak.com/channels/23684/feed.json?key=UZNQFPQFAG9A58Z
   todayText.text("minutes today "+calculateTotalMinutes(data));
 });
 
+function getStartOfDay(d) {
+  d.setHours(0);
+  d.setMinutes(0);
+  d.setSeconds(0);
+  return d;
+}
 
-//setInterval(function() {
-//  console.log("ping");
-//},1000);
+function encodeStartAndEndDates(startDate,endDate) {
+  var string="start="+uriDateFormat(startDate)+"&end="+uriDateFormat(endDate);
+  return encodeURI(string);
+}
 
 function calculateTotalMinutes(data) {
   return data.reduce(function(previous,current,index) {
